--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "heimseiten/contao-cta-at-the-side-bundle",
-    "description": "Fügt Call To Actions Buttons an einer Seite hinzu",
+    "description": "Fügt Call To Action Buttons an einer Seite hinzu",
     "keywords": [
         "sticky",
         "fixed",
