--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "source": "https://github.com/heimseiten/contao-cta-at-the-side-bundle"
     },
     "require": {
-        "contao/core-bundle": "^4.9"
+        "contao/core-bundle": "^4.9 | ^5.1"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.3",
